lab5/test/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character
    6 |    string s = "abc;
      |               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    7 |    char c = 'a;
      |             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    8 |    s = "abcd\";
      |        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    9 |    s = "abc|\
      |        ^
àoõ(ÊU:5.15: invalid token ("\*/")
àoõ(ÊU:5.20: syntax error, unexpected ';'
àoõ(ÊU:6.15: invalid token ("abc;)
àoõ(ÊU:7.9: syntax error, unexpected TOK_IDENT
àoõ(ÊU:7.13: invalid token ('a;)
àoõ(ÊU:8.8: invalid token ("abcd\";)
àoõ(ÊU:9.8: invalid token ("abc|   ;)
àoõ(ÊU:11.8: invalid token (23foobar)
